2009-05-26  John W. Eaton  <jwe@octave.org>

	* symtab.h
	(symbol_table::symbol_record::symbol_record_rep::is_variable):
	Use "! is_local ()" instead of storage_class != local.
	(symbol_table::do_variable_names): Only add variables to the list.
	(symbol_table::unmark_forced_variables): New static function
	* variables.cc (do_who): Use is_variable instead of is_defined.
	Also limit output to variables when using regexp pattern.
	* octave.cc (unmark_forced_vars): Delete.
	(execute_eval_option_code): Don't add unmark_forced_vars to 
	unwind_protect stack here.
	* toplev.cc (main_loop): Add symbol_table::unmark_forced_variables
	to the unwind_protect stack here.
	* input.cc (get_debug_input): Likewise.
	* parse.y (parse_fcn_file, eval_string): Likewise.

2009-05-25  Jaroslav Hajek  <highegg@gmail.com>

	* toplev.h (quit_allowed): New global variable.
	* toplev.cc (quit_allowed): Declare it.
	(Fquit): Raise error if quitting is not allowed.
	* octave.cc (octave_main): if running as embedded, disable quit by
	default.

2009-05-25  Jaroslav Hajek  <highegg@gmail.com>

	* variables.cc (do_who): Only output symbols with a defined value.

2009-05-22  Michael Goffioul  <michael.goffioul@gmail.com>

	* toplev.h (main_loop): Tag with OCTINTERP_API.
	* input.h (octave_read, get_input_from_file, get_input_from_stdin):
	Ditto.
	* lex.h (create_buffer, current_buffer, switch_to_buffer,
	delete_buffer, restore_input_buffer, delete_input_buffer): Ditto.

2009-05-22  Robert T. Short  <octave@phaselockedsystems.com>

	* ov-class.h, ov-class.cc (octave_class::clear_exemplar_map):
	New function.
	* symtab.h (symbol_record::clear_objects,
	symbol_record::do_clear_objects): New functions.
	* variables.cc (do_matlab_compatible_clear, clear):
	Handle -classes option.

2009-05-22  Jaroslav Hajek  <highegg@gmail.com>

	* src/ov-base-mat.cc (octave_base_matrix<MT>::assign (const
	octave_value_list, typename MT::element_type)): Avoid out of bounds
	assignments.
